--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,20 +2,20 @@
 
 # Use screen-256color instead of screen
 # Do not use anything else than screen*: https://raw.githubusercontent.com/tmux/tmux/master/FAQ
-set -g default-terminal screen-256color
+set-option -g default-terminal screen-256color
 
 # Start numbering at 1
-set -g base-index 1
-set -g pane-base-index 1
+set-option -g base-index 1
+set-option -g pane-base-index 1
 
 # Fix escape key delay: http://superuser.com/a/252717
-set -s escape-time 0
+set-option -s escape-time 0
 
 # Increase scrollback buffer size
-set -g history-limit 50000
+set-option -g history-limit 50000
 
 # Mouse
-set -g mouse on
+set-option -g mouse on
 
 # Rename the terminal window
 set-window-option -g automatic-rename on
@@ -33,18 +33,15 @@ set-window-option -g xterm-keys on
 ## Keybindings {{{
 
 # Prefix Ctrl-a instead of Ctrl-b
-set -g prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
+set-option -g prefix C-a
+unbind C-b
+bind C-a send-prefix
 
 # Rebind kill-pane so it doesn't ask for confirmation
 bind x kill-pane
 
 # Rebind new-window so it's created in the current path
 bind c new-window -c "#{pane_current_path}"
-
-# Vi mode
-set-window-option -g mode-keys vi
 
 # Select panes with Shift+arrow
 bind -n S-Left select-pane -L
@@ -61,16 +58,22 @@ bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Resize with Shift+Alt+Arrow
-bind-key -n S-M-Up resize-pane -U 5
-bind-key -n S-M-Down resize-pane -D 5
-bind-key -n S-M-Left resize-pane -L 5
-bind-key -n S-M-Right resize-pane -R 5
+bind -n S-M-Up resize-pane -U 5
+bind -n S-M-Down resize-pane -D 5
+bind -n S-M-Left resize-pane -L 5
+bind -n S-M-Right resize-pane -R 5
+
+# Vi mode
+set-window-option -g mode-keys vi
+
+# Begin copy-mode selection with 'v' to match vi keybinding
+bind -T copy-mode-vi v send -X begin-selection
 
 # Interaction with X clipboard
 # Copy the contents of the tmux buffer to X clipboard
 bind y run-shell -b "tmux show-buffer | xclip -f -selection primary | xclip -selection clipboard" \; display-message "Copied tmux buffer to clipboard"
 # Use y in copy mode (instead of Enter) to copy to both X clipboard and tmux buffer
-bind -t vi-copy y copy-pipe "xclip -f -selection primary | xclip -selection clipboard"
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -f -selection primary | xclip -selection clipboard"
 # }}}
 
 
