--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@
 
 # Use screen-256color instead of screen
 # Do not use anything else than screen*: https://raw.githubusercontent.com/tmux/tmux/master/FAQ
-set-option -g default-terminal screen-256color
+# set-option -g default-terminal screen-256color
 
 # Start numbering at 1
 set-option -g base-index 1
@@ -54,7 +54,7 @@ bind -n M-Left previous-window
 bind -n M-Right next-window
 
 # Split with \ and -
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Resize with Shift+Alt+Arrow
@@ -84,28 +84,23 @@ bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -f -selection primary
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
 
 # pane border
-#set-option -g pane-border-fg colour235 #base02
-set-option -g pane-border-fg black # CHANGED, switch to the other one if terminal color is black
-set-option -g pane-active-border-fg colour240 #base01
+# set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-border-style fg=black # CHANGED, switch to the other one if terminal color is black
+set-option -g pane-active-border-style fg=colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
