Some fixes and customizations to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,8 +66,20 @@ bind -n S-M-Right resize-pane -R 5
 # Vi mode
 set-window-option -g mode-keys vi
 
+# Begin copy mode with Space + remap next-layout button (was previously mapped to Space)
+bind Space copy-mode
+bind l next-layout
+
+# Disable auto-copy with MouseDrag (so mouse drag only selects the text like double and triple click)
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 # Begin copy-mode selection with 'v' to match vi keybinding
 bind -T copy-mode-vi v send -X begin-selection
+
+# Paste with p + remap next/previous window buttons (to free up the p button)
+bind p paste-buffer
+bind N next-window
+bind P previous-window
 
 # Interaction with X clipboard
 # Copy the contents of the tmux buffer to X clipboard
